--- a/equipos/athleticClub/asistencias.html
+++ b/equipos/athleticClub/asistencias.html
@@ -68,16 +68,16 @@
                 </img>
 
                 <h2>Unai Simon</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/julenAgirrezabala.png">
                 </img>
 
                 <h2>Julen Agirrezalaba</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -94,24 +94,24 @@
                 </img>
 
                 <h2>Dani Vivian</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/aitorParedes.png">
                 </img>
 
                 <h2>Aitor Paredes</h2>
-                <h5>Defensa Central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/yerayAlvarez.png">
                 </img>
 
                 <h2>Yeray Álvarez</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -125,24 +125,24 @@
                 </img>
 
                 <h2>Iñigo Lekue</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/yuriBerchiche.png">
                 </img>
 
                 <h2>Yuri Berchiche</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/oscarDeMarcos.png">
                 </img>
 
                 <h2>Óscar De Marcos</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>7 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -153,17 +153,17 @@
                 </img>
 
                 <h2>Imanol García de Albéniz</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/beñatPrados.png">
                 </img>
 
-                <h2>Beñat prados</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Beñat Prados</h2>
+                <h5>4 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -181,24 +181,24 @@
                 </img>
 
                 <h2>Mikel Vesga</h2>
-                <h5>Mediocentro defensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>5 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/oihanSancet.png">
                 </img>
 
                 <h2>Oihan Sancet</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>12 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/daniGarcia.png">
                 </img>
 
                 <h2>Dani García</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>6 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -212,16 +212,16 @@
                 </img>
 
                 <h2>Íñigo Ruíz de Galarreta</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/anderHerrera.png">
                 </img>
 
                 <h2>Ander Herrera</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>4 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -229,8 +229,8 @@
                 </img>
 
                 <h2>Raúl García</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -238,8 +238,8 @@
                 </img>
 
                 <h2>Unai Gómez</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -258,24 +258,24 @@
                 </img>
 
                 <h2>Alex Berenguer</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/iñakiWilliams.png">
                 </img>
 
                 <h2>Iñaki Williams</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>12 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/ikerMuniain.png">
                 </img>
 
                 <h2>Iker Muniain</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -289,24 +289,24 @@
                 </img>
 
                 <h2>Nico Williams</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>10 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/gorkaGuruzeta.png">
                 </img>
 
                 <h2>Gorka Guruzeta</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/bilbao/asierVillalibre.png">
                 </img>
 
                 <h2>Asier Villalibre</h2>
-                <h5>Delantero Centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -314,8 +314,8 @@
                 </img>
 
                 <h2>Malcum Adu</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
