--- a/equipos/atleticoDeMadrid/partidosJugados.html
+++ b/equipos/atleticoDeMadrid/partidosJugados.html
@@ -91,16 +91,16 @@
                 </img>
 
                 <h2>Jan Oblak</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>29 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/atleti/antonioGomis.png">
                 </img>
 
                 <h2>Antonio Gomis</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -117,24 +117,24 @@
                 </img>
 
                 <h2>José Giménez</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>15 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/atleti/cesarAzpilicueta.png">
                 </img>
 
                 <h2>César Azpilicueta</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>8 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/atleti/stefanSavic.png">
                 </img>
 
                 <h2>Stefan Savic</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>19 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -148,24 +148,24 @@
                 </img>
 
                 <h2>Nahuel Molina</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>21 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/atleti/marioHermoso.png">
                 </img>
 
                 <h2>Mario Hermoso</h2>
-                <h5>Defensa Central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>18 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/atleti/reinildo.png">
                 </img>
 
                 <h2>Reinildo</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>14 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -188,24 +188,24 @@
                 </img>
 
                 <h2>Rodrigo De Paul</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>28 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/atleti/koke.png">
                 </img>
 
                 <h2>Koke</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>12 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/atleti/saulÑiguez.png">
                 </img>
 
                 <h2>Saúl Ñíguez</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>8 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -219,16 +219,16 @@
                 </img>
 
                 <h2>Thomas Lemar</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/atleti/marcosLlorente.png">
                 </img>
 
                 <h2>Marcos Llorente</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>31 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -236,8 +236,8 @@
                 </img>
 
                 <h2>Rodrigo Riquelme</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>19 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -245,8 +245,8 @@
                 </img>
 
                 <h2>Axel Witsel</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>23 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -254,8 +254,8 @@
                 </img>
 
                 <h2>Pablo Barrios</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>10 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -274,24 +274,24 @@
                 </img>
 
                 <h2>Antoine Griezmann</h2>
-                <h5>Delantero Centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>30 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/atleti/memphisDepay.png">
                 </img>
 
                 <h2>Memphis Depay</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>13 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/atleti/angelCorrea.png">
                 </img>
 
                 <h2>Angel Correa</h2>
-                <h5>Delantero Centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>13 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -305,16 +305,16 @@
                 </img>
 
                 <h2>Samuel Lino</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>26 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/atleti/alvaroMorata.png">
                 </img>
 
                 <h2>Álvaro Morata</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>21 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             
         </div><!-- /.row -->
