--- a/equipos/cadiz/partidosJugados.html
+++ b/equipos/cadiz/partidosJugados.html
@@ -90,16 +90,16 @@
                 </img>
 
                 <h2>Conan Ledesma</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>28 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/davidGil.png">
                 </img>
 
                 <h2>David Gil</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -116,24 +116,24 @@
                 </img>
 
                 <h2>Joseba Zaldúa</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>10 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/fali.png">
                 </img>
 
                 <h2>Fali</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>25 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/victorChust.png">
                 </img>
 
                 <h2>Victor chust</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>27 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -147,24 +147,24 @@
                 </img>
 
                 <h2>Momo Mbaye</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>8 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/javiHernandez.png">
                 </img>
 
                 <h2>Javi Hernández</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>12 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/izaCaarcelen.png">
                 </img>
 
                 <h2>Iza Carcelén</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>10 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -173,24 +173,24 @@
                 </img>
 
                 <h2>Jorge Meré</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>16 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/luisHernandez.png">
                 </img>
 
                 <h2>Luis Hernández</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>5 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/lucasPires.png">
                 </img>
 
                 <h2>Lucas Pires</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>20 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -208,24 +208,24 @@
                 </img>
 
                 <h2>Fede San Emeterio</h2>
-                <h5>Mediocentro defensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/joseMariMartin.png">
                 </img>
 
                 <h2>José Mari Martín</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/rubenAlcaraz.png">
                 </img>
 
                 <h2>Rubén Alcaraz</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>28 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -239,16 +239,16 @@
                 </img>
 
                 <h2>Álex Fernandez</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>8 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/ivanAlejo.png">
                 </img>
 
                 <h2>Iván Alejo</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>6 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -256,16 +256,16 @@
                 </img>
 
                 <h2>Rominigue Kouamé</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/gonzaloEscalante.png">
                 </img>
 
                 <h2>Gonzalo Escalante</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>15 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -285,24 +285,24 @@
                 </img>
 
                 <h2>Rubén Sobrino</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>12 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/brianOcampo.png">
                 </img>
 
                 <h2>Brian Ocampo</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>8 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/cadiz/chrisRamos.png">
                 </img>
 
                 <h2>Chris ramos</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>17 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -316,8 +316,8 @@
                 </img>
 
                 <h2>Darwin Machis</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>5 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -325,8 +325,8 @@
                 </img>
 
                 <h2>Sergi Guardiola</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>4 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -334,8 +334,8 @@
                 </img>
 
                 <h2>Roger Martí</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>28 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -343,8 +343,8 @@
                 </img>
 
                 <h2>Maxi Gómez</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>15 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             
         </div><!-- /.row -->
