--- a/equipos/granada/rojas.html
+++ b/equipos/granada/rojas.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="alaves.html">Plantilla</a>
+                        <a class="nav-link active" aria-current="page" href="granada.html">Plantilla</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="estadio.html">Estadio</a>
@@ -88,16 +88,16 @@
                 </img>
 
                 <h2>Augusto Batalla</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/raulFernandez.png">
                 </img>
 
                 <h2>Raúl Fernandez</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -114,24 +114,24 @@
                 </img>
 
                 <h2>Miguel Rubio</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/jesusVallejo.png">
                 </img>
 
                 <h2>Jesus Vallejo</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/ricardSanchez.png">
                 </img>
 
                 <h2>Ricard Sanchez</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -145,24 +145,24 @@
                 </img>
 
                 <h2>Ignasi Miquel</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/carlosNeva.png">
                 </img>
 
                 <h2>Carlos Neva</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/victorDiaz.png">
                 </img>
 
                 <h2>Víctor Díaz</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -171,8 +171,8 @@
                 </img>
 
                 <h2>Kamil Piatkowski</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -190,24 +190,24 @@
                 </img>
 
                 <h2>Antonio Puertas</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/sergioRuiz.png">
                 </img>
 
                 <h2>Sergio Ruiz</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/oscarMelendo.png">
                 </img>
 
                 <h2>Óscar Melendo</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -221,16 +221,16 @@
                 </img>
 
                 <h2>Gerard Gumbau</h2>
-                <h5>Mediocentro defensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/gonzaloVillar.png">
                 </img>
 
                 <h2>Gonzalo Villar</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -249,24 +249,24 @@
                 </img>
 
                 <h2>Lucas Boyé</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/matiasArezo.png">
                 </img>
 
                 <h2>Matías Arezo</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/joseCallejon.png">
                 </img>
 
                 <h2>José Callejón</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -280,8 +280,8 @@
                 </img>
 
                 <h2>Myrto Uzuni</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
             
