--- a/equipos/lasPalmas/asistencias.html
+++ b/equipos/lasPalmas/asistencias.html
@@ -18,8 +18,8 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark container" aria-label="Third navbar example">
         <div class="container-fluid">
-            <img src="../../img/granada.png" alt="" width="40px">
-            <h4 class="text-white ms-2 mt-1">Granada</h4>
+            <img src="../../img/lasPalmas.png" alt="" width="40px">
+            <h4 class="text-white ms-2 mt-1">Las palmas</h4>
 
             <div class="collapse navbar-collapse ms-5" id="navbarsExample03">
                 <ul class="navbar-nav me-auto mb-2 mb-sm-0">
@@ -56,26 +56,6 @@
 
     <div class="container marketing">
 
-        <!-- ENTRENADOR -->
-        <h1 class="mt-5">ENTRENADOR</h1>
-        <hr>
-        <div class="row mt-5 d-flex justify-content-center">
-
-            <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorGranada.png">
-                </img>
-
-                <h2>Paco López</h2>
-                <h5>Entrenador</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar entrenador</button>
-            </div><!-- /.col-lg-4 -->
-
-
-
-
-        </div><!-- /.row -->
-
-
         <!-- PORTEROS -->
 
         <h1 class="mt-5">PORTEROS</h1>
@@ -84,20 +64,20 @@
 
         <div class="row text-center">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/augustoBatalla.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/alvaroValles.png">
                 </img>
 
-                <h2>Augusto Batalla</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Álvaro Valles</h2>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/raulFernandez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/aaronEscandell.png">
                 </img>
 
-                <h2>Raúl Fernandez</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Aarón Escandell</h2>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -110,28 +90,28 @@
 
         <div class="row text-center" id="defensa">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/miguelRubio.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/marvinPark.png">
                 </img>
 
-                <h2>Miguel Rubio</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Marvin Park</h2>
+                <h5>4 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/jesusVallejo.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/sergiCardona.png">
                 </img>
 
-                <h2>Jesus Vallejo</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Sergi Cardona</h2>
+                <h5>6 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/ricardSanchez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/alexSuarez.png">
                 </img>
 
-                <h2>Ricard Sanchez</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Álex Suarez</h2>
+                <h5>1 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -141,38 +121,59 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/ignasiMiquel.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/ericCurbelo.png">
                 </img>
 
-                <h2>Ignasi Miquel</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Eric Curbelo</h2>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/carlosNeva.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/alvaroLemos.png">
                 </img>
 
-                <h2>Carlos Neva</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Álvaro Lemos</h2>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/victorDiaz.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/mikaMarmol.png">
                 </img>
 
-                <h2>Víctor Díaz</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Mika Mármol</h2>
+                <h5>3 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/kamilPiatkowski.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/daleySinkgraven.png">
                 </img>
 
-                <h2>Kamil Piatkowski</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Daley Sinkgraven</h2>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+            </div><!-- /.col-lg-4 -->
+
+
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/saulCoco.png">
+                </img>
+
+                <h2>Saúl Coco</h2>
+                <h5>3 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+            </div><!-- /.col-lg-4 -->
+
+
+
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/julianAraujo.png">
+                </img>
+
+                <h2>Julián Araujo</h2>
+                <h5>4 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -186,28 +187,28 @@
 
         <div class="row text-center" id="mediocentros">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/antonioPuertas.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/javiMuñoz.png">
                 </img>
 
-                <h2>Antonio Puertas</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Javi Muñóz</h2>
+                <h5>4 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/sergioRuiz.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/albertoMoleiro.png">
                 </img>
 
-                <h2>Sergio Ruiz</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Albeto Moleiro</h2>
+                <h5>7 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/oscarMelendo.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/benitoRamirez.png">
                 </img>
 
-                <h2>Óscar Melendo</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Benito Ramírez</h2>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -217,21 +218,47 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/gerardGumbau.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/enzoLoiodice.png">
                 </img>
 
-                <h2>Gerard Gumbau</h2>
-                <h5>Mediocentro defensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Enzo Loiodice</h2>
+                <h5>3 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/gonzaloVillar.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/kirianRodriguez.png">
                 </img>
 
-                <h2>Gonzalo Villar</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Kirian Rodríguez</h2>
+                <h5>9 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/omenukeMfulu.png">
+                </img>
+
+                <h2>Omenuke Mfulu</h2>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+            </div><!-- /.col-lg-4 -->
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/pejiño.png">
+                </img>
+
+                <h2>Pejiño</h2>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+            </div><!-- /.col-lg-4 -->
+
+            <div class="col-lg-4 mb-5">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/fabioGonzalez.png">
+                </img>
+
+                <h2>Fabio González</h2>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
+            </div><!-- /.col-lg-4 -->
+
 
         </div><!-- /.row -->
 
@@ -245,28 +272,28 @@
 
         <div class="row text-center" id="delantero">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/lucasBoye.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/cristianHerrera.png">
                 </img>
 
-                <h2>Lucas Boyé</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Cristian Herrera</h2>
+                <h5>0 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/matiasArezo.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/sandroRamirez.png">
                 </img>
 
-                <h2>Matías Arezo</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Sandro Ramírez</h2>
+                <h5>3 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/joseCallejon.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/munirElHaddadi.png">
                 </img>
 
-                <h2>José Callejón</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Munir El Haddadi</h2>
+                <h5>4 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -276,12 +303,12 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="../../jugadores/granada/myrtoUzuni.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/lasPalmas/marcCardona.png">
                 </img>
 
-                <h2>Myrto Uzuni</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h2>Marc Cardona</h2>
+                <h5>1 asistencias</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de asistencias</button>
             </div><!-- /.col-lg-4 -->
 
             
