--- a/equipos/rayo/rojas.html
+++ b/equipos/rayo/rojas.html
@@ -89,16 +89,16 @@
                 </img>
 
                 <h2>Stole Dimitrievski</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/daniCardenas.png">
                 </img>
 
                 <h2>Dani Cardenas</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -115,24 +115,24 @@
                 </img>
 
                 <h2>Pep Chavarría</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/martinPascual.png">
                 </img>
 
                 <h2>Martín Pascual</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/aridaneHernandez.png">
                 </img>
 
                 <h2>Aridane Hernández</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -146,24 +146,24 @@
                 </img>
 
                 <h2>Alfonso Espino</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/abdulMumin.png">
                 </img>
 
                 <h2>Abdul Mumin</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/ivanBalliu.png">
                 </img>
 
                 <h2>Iván Balliu</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -172,8 +172,8 @@
                 </img>
 
                 <h2>Florian Lejeune</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>4 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
         </div><!-- /.row -->
@@ -191,24 +191,24 @@
                 </img>
 
                 <h2>José Pozo</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/isipalazon.png">
                 </img>
 
                 <h2>Isi Palazón</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/oscarTtrejo.png">
                 </img>
 
                 <h2>Óscar Trejo</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>4 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -222,32 +222,32 @@
                 </img>
 
                 <h2>Randy Nteka</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/kikePerez.png">
                 </img>
 
                 <h2>Kike Pérez</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/unaiLopez.png">
                 </img>
 
                 <h2>Unai López</h2>
-                <h5>Mediocentro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/alvaroGarcia.png">
                 </img>
 
                 <h2>Alvaro García</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -255,8 +255,8 @@
                 </img>
 
                 <h2>Pathé Ciss</h2>
-                <h5>Mediocentro defensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -264,8 +264,8 @@
                 </img>
 
                 <h2>Óscar Valentin</h2>
-                <h5>Mediocentro ofensivo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>2 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             
         </div><!-- /.row -->
@@ -284,24 +284,24 @@
                 </img>
 
                 <h2>Radamel Falcao</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/bebe.png">
                 </img>
 
                 <h2>Bebé</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>0 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/rayoVallecano/jorgeDeFrutos.png">
                 </img>
 
                 <h2>Jorge de Frutos</h2>
-                <h5>Extremo</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -315,8 +315,8 @@
                 </img>
 
                 <h2>Raúl de Tomas</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>6 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
@@ -324,8 +324,8 @@
                 </img>
 
                 <h2>Sergio Camello</h2>
-                <h5>Delantero centro</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>1 rojas</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar numero de rojas</button>
             </div><!-- /.col-lg-4 -->
 
             
