--- a/equipos/getafe/partidosJugados.html
+++ b/equipos/getafe/partidosJugados.html
@@ -88,16 +88,16 @@
                 </img>
 
                 <h2>David Soria</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>29 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/danielFuzato.png">
                 </img>
 
                 <h2>Daniel Frutazo</h2>
-                <h5>Portero</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
@@ -114,24 +114,24 @@
                 </img>
 
                 <h2>Djené Dakonam</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>17 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/fabrizioAngeleri.png">
                 </img>
 
                 <h2>Fabrizio Angileri</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>3 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/gastonAlvarez.png">
                 </img>
 
                 <h2>Gastón Álvaraz</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>7 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
@@ -145,24 +145,24 @@
                 </img>
 
                 <h2>Domingos Duarte</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>12 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/omarAlderete.png">
                 </img>
 
                 <h2>Omar Alderete</h2>
-                <h5>Defensa central</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>19 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
                 <img class="rounded-circle" width="140" height="140" src="../../jugadores/getafe/joseCarmona.png">
                 </img>
 
                 <h2>José Ángel Carmona</h2>
-                <h5>Lateral</h5>
-                <button class="btn btn-secondary bg-primary cambiarNumeroAmarillas">Eliminar jugador</button>
+                <h5>7 partidos</h5>
+                <button class="btn btn-secondary bg-primary cambiarNumeroPartidos">Cambiar número de Partidos partidos</button>
             </div><!-- /.col-lg-4 -->
 
 
